--- a/src/docs/asciidoc/meeting/create-meeting.adoc
+++ b/src/docs/asciidoc/meeting/create-meeting.adoc
@@ -9,10 +9,15 @@
 
 아래 네 가지 값을 전달하여 모임을 생성합니다.
 
-모임 제목(title)
-모임 위치(location)
-모임 시각(startedAt)
-카카오톡 오픈채팅 URL(kakaoChatUrl)
+모임 제목 (title)
+모임 위치 (location)
+모임 시각 (startedAt)
+카카오톡 오픈채팅 URL (kakaoChatUrl)
+모임 설명 (description)
+모임 참여 허용 성별 (allowedGender)
+모임 참여 최소 나이 (minAge)
+모임 참여 최대 나이 (maxAge)
+모임에서 대화할 수 있는 정도 (conversationType)
 
 생성에 성공하면 응답으로 `201 Created` 상태 값과 함께 Location Header에 생성된 URI를 담아 return 합니다.
 
