Add 401 Unauthorized docs
* 401 Unauthorized 관련 문서 추가

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -105,4 +105,6 @@
 
 === Error Request / Response Example
 
-==== link:./error/create-meeting-error.html[400 Bad Request]
+==== link:./error/bad-request.html[400 Bad Request]
+
+==== link:./error/unauthorized.html[401 Unauthorized]
