--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -83,7 +83,7 @@
 
 ==== link:./member/update-member.html[[PATCH /members/\{memberId\}\] 회원 정보 업데이트]
 
-==== link:./member/delete-member.html[[DELETE /members/\{memberId\}\] 회원 탈퇴]
+==== link:./member/withdraw.html[[DELETE /members/\{memberId\}\] 회원 탈퇴]
 
 ==== link:./member/token-from-provider.html[[POST /members/token-from-provider\] access-token 발행 (Mobile)]
 
