--- a/src/docs/asciidoc/meeting/get-meetings.adoc
+++ b/src/docs/asciidoc/meeting/get-meetings.adoc
@@ -33,7 +33,7 @@ include::{snippets}/meeting/get-meetings/query-parameters.adoc[]
 
 include::{snippets}/meeting/get-meetings/http-response.adoc[]
 
-=== Response Field
+=== Response Fields
 
 include::{snippets}/meeting/get-meetings/response-fields.adoc[]
 
