--- a/src/docs/asciidoc/meeting/get-meeting.adoc
+++ b/src/docs/asciidoc/meeting/get-meeting.adoc
@@ -14,8 +14,17 @@ meeting 고유 식별자(meetingId) 값을 path parameter에 담아 요청합니
 [[request]]
 == Request
 
-include::{snippets}/meeting/get-meeting/curl-request.adoc[]
+=== HTTP Request Message
+
 include::{snippets}/meeting/get-meeting/http-request.adoc[]
+
+=== cURL Request
+
+include::{snippets}/meeting/get-meeting/curl-request.adoc[]
+
+=== HTTPie Request
+
+include::{snippets}/meeting/get-meeting/httpie-request.adoc[]
 
 === Request Headers
 
@@ -25,15 +34,25 @@ include::{snippets}/meeting/get-meeting/request-headers.adoc[]
 
 include::{snippets}/meeting/get-meeting/path-parameters.adoc[]
 
+=== Request Body
+
+include::{snippets}/meeting/get-meeting/request-body.adoc[]
+
 [[response]]
 == Response
 
+=== HTTP Response Message
+
 include::{snippets}/meeting/get-meeting/http-response.adoc[]
+
+=== Response Headers
+
+include::{snippets}/meeting/get-meeting/response-headers.adoc[]
 
 === Response Fields
 
 include::{snippets}/meeting/get-meeting/response-fields.adoc[]
 
-=== Response Body Example
+=== Response Body
 
 include::{snippets}/meeting/get-meeting/response-body.adoc[]
